# crush

./: .gitignore  .prettierrc  README.md  TODO.md  crowdin.yml  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
.github/: dependabot.yml  latest.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: boostrap.json  default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/locales/: default.json  en.json
src-tauri/resources/locales/af-ZA/: default.json
src-tauri/resources/locales/ar/: default.json
src-tauri/resources/locales/ar-SA/: default.json
src-tauri/resources/locales/ca-ES/: default.json
src-tauri/resources/locales/cs/: default.json
src-tauri/resources/locales/cs-CZ/: default.json
src-tauri/resources/locales/da/: default.json
src-tauri/resources/locales/da-DK/: default.json
src-tauri/resources/locales/de/: default.json
src-tauri/resources/locales/de-DE/: default.json
src-tauri/resources/locales/el/: default.json
src-tauri/resources/locales/el-GR/: default.json
src-tauri/resources/locales/en-US/: default.json
src-tauri/resources/locales/es-ES/: default.json
src-tauri/resources/locales/fi/: default.json
src-tauri/resources/locales/fi-FI/: default.json
src-tauri/resources/locales/fr/: default.json
src-tauri/resources/locales/fr-FR/: default.json
src-tauri/resources/locales/he-IL/: default.json
src-tauri/resources/locales/hu-HU/: default.json
src-tauri/resources/locales/it/: default.json
src-tauri/resources/locales/it-IT/: default.json
src-tauri/resources/locales/ja/: default.json
src-tauri/resources/locales/ja-JP/: default.json
src-tauri/resources/locales/ko-KR/: default.json
src-tauri/resources/locales/ni-ha/: default.json
src-tauri/resources/locales/nl/: default.json
src-tauri/resources/locales/nl-NL/: default.json
src-tauri/resources/locales/no/: default.json
src-tauri/resources/locales/no-NO/: default.json
src-tauri/resources/locales/pl/: default.json
src-tauri/resources/locales/pl-PL/: default.json
src-tauri/resources/locales/pt-BR/: default.json
src-tauri/resources/locales/pt-PT/: default.json
src-tauri/resources/locales/ro/: default.json
src-tauri/resources/locales/ro-RO/: default.json
src-tauri/resources/locales/ru/: default.json
src-tauri/resources/locales/ru-RU/: default.json
src-tauri/src/: interactive.rs  lib.rs  main.rs  rd.rs  rpc.rs
src-tauri/src/commands/: archive.rs  boostrapper_importer.rs  boostrapperimporter.rs  crush.rs  discord_rpc.rs  downloadingroblox.rs  fs.rs  launch_roblox.rs  mod.rs  mods.rs  rename.rs  roblox_deployment.rs  watcher.rs  window.rs
(+111 files in other folders)
