[package]
name = "crush"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crush_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
walkdir = "2"
md5 = "0.8.0"
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence.git" }
zip = "8.3.1"
log = "0.4.29"
futures = "0.3"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
window-vibrancy = "0.7.1"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-fs-pro = "2.4.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

