[package]
name = "crush"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crush_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
walkdir = "2"
discord-rich-presence = "1.1.0"
dirs-next = "2.0"
md5 = "0.8.0"
zip = "8.4.0"
log = "0.4.29"
futures = "0.3"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
window-vibrancy = "0.7.1"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-fs-pro = "2.4.0"
notify = "8.2.0"
filthy-rich = "0.7.0"
tokio = "1.50.0"
regex = "1.12.3"
reqwest = "0.13.2"
sysinfo = "0.38.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

